Scrollbar + bugfix

--- a/static/main.css
+++ b/static/main.css
@@ -4,6 +4,8 @@ body {
     background-color: #e4decd;
     width: 100%;
     height: 100%;
+    scrollbar-width: thin;
+    scrollbar-color: #888 transparent; /* color of the scrollbar and its track */
 }
 
 /* Logo Styles */
@@ -683,4 +685,18 @@ input:checked + .slider:before {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px; /* Adjust the border-radius for roundness */
+}
+
+body .no-scroll {
+    scrollbar-color: transparent transparent;
+    transition: scrollbar-color 1s ease-in-out;
 }
